--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,8 +24,12 @@
     #social{
       top: 72px;
     }
-    col-3 p{
+    .col-3 p{
       column-count: 2;
+       -moz-column-count: 2;
+  -webkit-column-count: 2;
     }
+    
+    
   }
   
