--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,7 +29,25 @@
        -moz-column-count: 2;
   -webkit-column-count: 2;
     }
-    
-    
+  }
+  
+  @media (max-width: 750px){
+    #navbar nav a{
+      font-size: .09em;
+    }
+    .col-3 p{
+      column-count: 1;
+    }
+    .col-1 .col-2 .col-3{
+      width: 100%;
+      margin-left: 0px;
+      float: none;
+    }
+    .border-right{
+      border: 0px;
+    }
+    #details div{
+      height: auto;
+    }
   }
   
