--- a/css/responsive.css
+++ b/css/responsive.css
@@ -52,11 +52,11 @@
   }
   
   @media (max-width: 700px){
-    #navbar{
+    #navbar nav a{
       display: none;
     }
     #navbar nav a.menu-icon{
-      
+      display:;
     }
   }
   
